Fix currency-switcher alignment

--- a/src/components/barter/item/index.sass
+++ b/src/components/barter/item/index.sass
@@ -161,6 +161,7 @@ div[class^="barter-item-"]
 
 			.currency-switcher
 				flex-basis: auto
+				margin: 0 0 -5px
 
 				.currency
 					font-weight: bold
