--- a/src/components/currency-switcher/index.sass
+++ b/src/components/currency-switcher/index.sass
@@ -5,7 +5,6 @@
 	align-items: center
 	gap: $r / 2
 	flex-basis: 100%
-	margin: 0 0 -5px
 	max-width: calc(#{$sidebar-width} - 26px)
 
 	/deep/
